fix page visibility and links

--- a/packages/silex-lib/static/2.11/front-end.css
+++ b/packages/silex-lib/static/2.11/front-end.css
@@ -10,7 +10,7 @@
 .website-width {
   width: 960px;
 }
-.paged-element {
+.paged-element-hidden {
   display: none;
 }
 /* resize */
